# aoc-2020

./: .gitattributes  Cargo.toml  README.md
inputs/: day20_test.txt
script/: day11.rn  day13.rn  day14.rn  day15.rn  day16.rn  day17.rn  day18.rn  day19.rn  day20.rn  day21.rn  day4.rn  day5.rn  day6.rn  day7.rn  day8.rn  day9.rn  main.rn  utils.rn
scripts/: day1.rn  day10.rn  day11.rn  day12.rn  day2.rn  day3.rn  day4.rn  day5.rn  day6.rn  day8.rn  day9.rn  main.rn  utils.rn
src/: main.rs
